--- a/calculadora-ganancias/www/templates/calculadora.html
+++ b/calculadora-ganancias/www/templates/calculadora.html
@@ -1,39 +1,45 @@
 <ion-view title="Calculadora de ganancias">
-  <ion-content scroll="false">
-    <div ng-controller="CalculatorCtrl">
-      <div>
-        Datos
-      </div>
-      <div >
-        <div >
-          <div >
-              <div >
-                <div >
-                  <label>Sueldo Bruto</label>
-                  <input type="text" ng-model="sueldoBruto" >
-                </div>
-              </div>
-              <div>
-                <label>Conyuge a Cargo "0" si no tiene "1" si tiene </label>
-                <input type="text" ng-model="tieneConyuge" >
-              </div>
-              <div>
-                <label>Familiares a Cargo</label>
-                <input type="text" ng-model="familiaresACargo" >
-              </div>
-              <div>
-                <label>Cantidad de Hijos</label>
-                <input type="text" ng-model="cantidadHijos" >
-              </div>
-            <button ng-click="calcular()">Calcular</button>
-          </div>
-        </div>
-      </div>
-      Descuento Ganancias: $ {{impustoPorGanancias}} <br/>
-      Descuentos Jubilación + OS + Ley: $ {{descuentos}} <br/>
-      Descuentos Totales + OS + Ley: $ {{descuentosTotales}} <br/>
-      Sueldo Neto: $ {{sueldoNeto}}
+  <ion-content  scroll="false" style="background-color: rgba(0,0,0,0.02)">
+    <div class="bar bar-header bar-calm" >
+      <h1 class="title">Cálculo de Ganancias</h1>
+    </div>
+    <div class="content has-header" ng-controller="CalculatorCtrl">
+      <div class="list list-inset">
+        <label class="item item-input">
+          <span style="min-width: 10em" class="input-label">Sueldo Bruto en $</span>
+          <input class="big" style="text-align: right" type="number" min="0" ng-model="sueldoBruto" ng-change="calcular()"/>
+        </label>
 
+        <ion-toggle ng-model="tieneConyuge" toggle-class="toggle-balanced" ng-change="calcular()">Conyugue a cargo
+        </ion-toggle>
+
+        <label class="item item-input">
+          <span style="min-width: 10em;" class="input-label">Familiares a Cargo </span>
+          <input style="text-align: right" type="number" ng-model="familiaresACargo" min=0 max="20" ng-change="calcular()"/>
+        </label>
+
+        <label class="item item-input">
+          <span style="min-width: 10em;" class="input-label">Cantidad de Hijos </span>
+          <input style="text-align: right" type="number" ng-model="cantidadHijos" min=0 max="20" ng-change="calcular()"/>
+        </label>
+      </div>
+      <div class="card">
+        <div class="item item-text-wrap">
+          <label >Descuento Ganancias:  </label> <span class="assertive resultados-right"> $ {{impustoPorGanancias}}</span>
+        </div>
+        <div class="item item-text-wrap">
+         <label >Dstos. Jubilación + OS + Ley:</label> <span class="resultados-right"> $ {{descuentos}}</span>
+        </div>
+        <div class="item item-text-wrap" style="padding-bottom: 2em !important;">
+          <label> Dstos. Tot. + OS + Ley: </label> <span class="resultados-right"> $ {{descuentosTotales}}</span>
+        </div>
+
+        <div class="item item-text-wrap item-calm" >
+         <label> Sueldo Neto:</label> <span class="resultados-right big"> $ {{sueldoNeto}}</span>
+        </div>
+
+
+      </div>
     </div>
   </ion-content>
 </ion-view>
