cambios menores estéticos

--- a/calculadora-ganancias/www/templates/calculadora.html
+++ b/calculadora-ganancias/www/templates/calculadora.html
@@ -10,7 +10,7 @@
           <input class="big" style="text-align: right" type="number" min="0" ng-model="sueldoBruto" ng-change="calcular()"/>
         </label>
 
-        <ion-toggle ng-model="tieneConyuge" toggle-class="toggle-balanced" ng-change="calcular()">Conyugue a cargo
+        <ion-toggle ng-model="tieneConyuge" toggle-class="toggle-balanced" ng-change="calcular()">Conyuge a Cargo
         </ion-toggle>
 
         <label class="item item-input">
@@ -28,10 +28,10 @@
           <label >Descuento Ganancias:  </label> <span class="assertive resultados-right"> $ {{impustoPorGanancias}}</span>
         </div>
         <div class="item item-text-wrap">
-         <label >Dstos. Jubilación + OS + Ley:</label> <span class="resultados-right"> $ {{descuentos}}</span>
+         <label >Desct. Jubilación + OS + Ley:</label> <span class="resultados-right"> $ {{descuentos}}</span>
         </div>
         <div class="item item-text-wrap" style="padding-bottom: 2em !important;">
-          <label> Dstos. Tot. + OS + Ley: </label> <span class="resultados-right"> $ {{descuentosTotales}}</span>
+          <label>Desct. Totales: </label> <span class="resultados-right"> $ {{descuentosTotales}}</span>
         </div>
 
         <div class="item item-text-wrap item-calm" >
