--- a/calculadora-ganancias/www/css/style.css
+++ b/calculadora-ganancias/www/css/style.css
@@ -7,3 +7,18 @@
 .big{
   font-size: 1.5em;
 }
+
+.center{
+	align-items: center;
+}
+
+div.toggle-chico{
+	padding-left:10px;
+	padding-right:3em;
+}
+
+div.toggle-chico label{
+	padding-right:30px;
+}
+
+
