agrego nueva version

--- a/calculadora-ganancias/www/templates/calculadora.html
+++ b/calculadora-ganancias/www/templates/calculadora.html
@@ -42,12 +42,11 @@
         <div class="item item-text-wrap">
          <label >Desct. Jubilación + OS + Ley:</label> <span class="resultados-right"> $ {{descuentos}}</span>
         </div>
-        <div class="item item-text-wrap" style="padding-bottom: 2em !important;">
+        <div class="item item-text-wrap" >
           <label>Desct. Totales: </label> <span class="resultados-right"> $ {{descuentosTotales}}</span>
         </div>
-
         <div class="item item-text-wrap item-calm" >
-         <label> Sueldo Neto:</label> <span class="resultados-right big"> $ {{sueldoNeto}}</span>
+         <label > Sueldo Neto:</label> <span class="resultados-right big"> $ {{sueldoNeto}}</span>
         </div>
 
 
