fix para tenlefonos con pantalla angosta

--- a/calculadora-ganancias/www/templates/calculadora.html
+++ b/calculadora-ganancias/www/templates/calculadora.html
@@ -37,17 +37,17 @@
 
       </div>
       <div class="card">
-        <div class="item item-text-wrap">
-          <label >Descuento Ganancias:  </label> <span class="assertive resultados-right"> $ {{impustoPorGanancias}}</span>
+        <div class="item item-text">
+          <span >Descuento Ganancias:  </span> <span class="assertive resultados-right"> $ {{impustoPorGanancias}}</span>
         </div>
-        <div class="item item-text-wrap">
-         <label >Desct. Jubilación + OS + Ley:</label> <span class="resultados-right"> $ {{descuentos}}</span>
+        <div class="item item-text">
+         <span >Desct. Jubilación + OS + Ley:</span> <span class="resultados-right"> $ {{descuentos}}</span>
         </div>
-        <div class="item item-text-wrap" >
-          <label>Desct. Totales: </label> <span class="resultados-right"> $ {{descuentosTotales}}</span>
+        <div class="item item-text" >
+          <span>Desct. Totales: </span> <span class="resultados-right"> $ {{descuentosTotales}}</span>
         </div>
-        <div class="item item-text-wrap item-calm" >
-         <label> Sueldo Neto:</label> <span class="resultados-right big"> $ {{sueldoNeto}}</span>
+        <div class="item item-text item-calm" >
+         <span> Sueldo Neto:</span> <span class="resultados-right big"> $ {{sueldoNeto}}</span>
         </div>
 
 
