--- a/calculadora-ganancias/www/templates/calculadora.html
+++ b/calculadora-ganancias/www/templates/calculadora.html
@@ -7,7 +7,7 @@
                 <button class="button button-icon button-clear ion-android-more-vertical"
                         ng-click="popover.show($event)">
                 </button>
-
+      </span>
     </div>
   </ion-header-bar>
   <ion-content scroll="true" style="background-color: rgba(0,0,0,0.02)" ng-controller="CalculatorCtrl">
