--- a/calculadora-ganancias/www/templates/menu.html
+++ b/calculadora-ganancias/www/templates/menu.html
@@ -1,10 +1,11 @@
 
-  <ion-popover-view>
+  <ion-popover-view >
     <ion-content scroll="false">
       <ion-list>
-        <ion-item ng-click="shareAnywhere()">Compartir</ion-item>
-        <ion-item ng-click="irAStore()">Danos tu opinión</ion-item>
+        <ion-item class="item-icon-right" ng-click="shareAnywhere()">Compartir<i class="icon assertive-900 ion-android-share-alt"></i></ion-item>
+        <ion-item class="item-icon-right" ng-click="irAStore()">Danos tu opinión<i class="icon balanced-900 ion-ios-chatbubble"></i></ion-item>
       </ion-list>
     </ion-content>
   </ion-popover-view>
+
 
