agrego redondeo de 2 digitos agrego color de renglones

--- a/calculadora-ganancias/www/templates/calculadora.html
+++ b/calculadora-ganancias/www/templates/calculadora.html
@@ -52,13 +52,13 @@
 
       </div>
       <div class="card">
-        <div class="item item-text">
+        <div class="item item-text par">
           <span>Descuento Ganancias:  </span> <span class="assertive resultados-right"> $ {{impustoPorGanancias}}</span>
         </div>
         <div class="item item-text">
           <span>Aportes:</span> <span class="resultados-right"> $ {{descuentos}}</span>
         </div>
-        <div class="item item-text">
+        <div class="item item-text par">
           <span>Desct. Totales: </span> <span class="resultados-right"> $ {{descuentosTotales}}</span>
         </div>
         <div class="item item-text item-calm">
