--- a/calculadora-ganancias/www/css/style.css
+++ b/calculadora-ganancias/www/css/style.css
@@ -13,6 +13,10 @@
 	align-items: center;
 }
 
+.item.item-text.par{
+  background-color: rgba(0,0,0,0.06);
+}
+
 div.toggle-chico{
 	padding-left:10px;
 	padding-right:3em;
