--- a/calculadora-ganancias/www/templates/calculadora.html
+++ b/calculadora-ganancias/www/templates/calculadora.html
@@ -5,7 +5,7 @@
     <div class="buttons buttons-right header-item">
       <span class="right-buttons">
                 <button class="button button-icon button-clear ion-android-more-vertical"
-                        ng-click="popover.show($event)">
+                        ng-click="popover.show( event)">
                 </button>
       </span>
     </div>
@@ -15,13 +15,15 @@
       <div class="card">
         <div class="row item item-input">
 
-          <span class="col col-50 ">Sueldo Bruto en $ </span>
-          <input select-on-click class="big input-highlight " style="text-align: right;" type="number" min="0" ng-model="input.sueldoBruto"
+          <span class="col col-50 ">Sueldo Bruto   </span>
+          <input select-on-click class="big input-highlight " style="text-align: right;" type="number" min="0"
+                 ng-model="input.sueldoBruto"
                  ng-change="calcular()"/>
         </div>
 
 
-        <ion-toggle class="toggle-chico" ng-model="input.tieneConyuge" toggle-class="toggle-balanced" ng-change="calcular()">
+        <ion-toggle class="toggle-chico" ng-model="input.tieneConyuge" toggle-class="toggle-balanced"
+                    ng-change="calcular()">
           Conyuge a Cargo
         </ion-toggle>
 
@@ -53,44 +55,48 @@
         <ion-toggle class="toggle-chico" ng-model="masDeducciones" toggle-class="toggle-balanced">
           Ver más deducciones
         </ion-toggle>
+        <div ng-hide="!masDeducciones" class="" >
+          <div class="row item item-input ">
+            <span class="col col-50 ">Cred. Hipotecarios   </span>
+            <input select-on-click class="big input-highlight " style="text-align: right;" type="number" min="0"
+                   ng-model="input.creditosHipotecarios"
+                   ng-change="calcular()"/>
+          </div>
 
-        <div ng-hide="!masDeducciones" class="row item item-input ng-hide check-element animate-show">
-          <span class="col col-50 ">Cred. Hipotecarios $ </span>
-          <input select-on-click class="big input-highlight " style="text-align: right;" type="number" min="0" ng-model="input.creditosHipotecarios"
-                 ng-change="calcular()"/>
+          <div  class="row item item-input ">
+            <span class="col col-50 ">Servicio doméstico   </span>
+            <input select-on-click class="big input-highlight " style="text-align: right;" type="number" min="0"
+                   ng-model="input.servicioDomestico"
+                   ng-change="calcular()"/>
+          </div>
+
+          <div class="row item item-input">
+            <span class="col col-50 ">Seguro de vida   </span>
+            <input select-on-click class="big input-highlight " style="text-align: right;" type="number" min="0"
+                   ng-model="input.segVida"
+                   ng-change="calcular()"/>
+          </div>
+
+          <div class="row item item-input">
+            <span class="col col-50 ">Gastos de sepelio   </span>
+            <input select-on-click class="big input-highlight " style="text-align: right;" type="number" min="0"
+                   ng-model="input.sepelio"
+                   ng-change="calcular()"/>
+          </div>
         </div>
-
-        <div  ng-hide="!masDeducciones"   class="row item item-input  ng-hide check-element animate-show">
-          <span class="col col-50 ">Servicio doméstico $ </span>
-          <input select-on-click class="big input-highlight " style="text-align: right;" type="number" min="0" ng-model="input.servicioDomestico"
-                 ng-change="calcular()"/>
-        </div>
-
-        <div  ng-hide="!masDeducciones"   class="row item item-input  ng-hide check-element animate-show">
-          <span class="col col-50 ">Seguro de vida $ </span>
-          <input select-on-click class="big input-highlight " style="text-align: right;" type="number" min="0" ng-model="input.segVida"
-                 ng-change="calcular()"/>
-        </div>
-
-        <div  ng-hide="!masDeducciones"   class="row item item-input  ng-hide check-element animate-show">
-          <span class="col col-50 ">Gastos de sepelio $ </span>
-          <input select-on-click class="big input-highlight " style="text-align: right;" type="number" min="0" ng-model="input.sepelio"
-                 ng-change="calcular()"/>
-        </div>
-
       </div>
       <div class="card">
         <div class="item item-text par">
-          <span>Descuento Ganancias:  </span> <span class="assertive resultados-right"> $ {{impustoPorGanancias}}</span>
+          <span>Descuento Ganancias:  </span> <span class="assertive resultados-right">   $ {{impustoPorGanancias}}</span>
         </div>
         <div class="item item-text">
-          <span>Aportes:</span> <span class="resultados-right"> $ {{descuentos}}</span>
+          <span>Aportes:</span> <span class="resultados-right">   $ {{descuentos}}</span>
         </div>
         <div class="item item-text par">
-          <span>Desct. Totales: </span> <span class="resultados-right"> $ {{descuentosTotales}}</span>
+          <span>Desct. Totales: </span> <span class="resultados-right">   $ {{descuentosTotales}}</span>
         </div>
         <div class="item item-text item-calm">
-          <span> Sueldo Neto:</span> <span class="resultados-right big"> $ {{sueldoNeto}}</span>
+          <span> Sueldo Neto:</span> <span class="resultados-right big">   $ {{sueldoNeto}}</span>
         </div>
 
 
